# Social-Network

./: README.md
Client/: CMakeLists.txt  makefile
Client/include/: connectionHandler.h  input.h  output.h
Client/src/: connectionHandler.cpp  echoClient.cpp  input.cpp  output.cpp
Server/src/main/java/bgu/spl/net/api/bidi/: BidiMessagingProtocolImpl.java  ConnectionsImpl.java  User.java  Users.java
Server/src/main/java/bgu/spl/net/impl/BGSServer/: ReactorMain.java  TPCMain.java
Server/src/main/java/bgu/spl/net/impl/echo/: LineMessageEncoderDecoder.java
Server/src/main/java/bgu/spl/net/impl/rci/: ObjectEncoderDecoder.java  RemoteCommandInvocationProtocol.java
Server/src/main/java/bgu/spl/net/srv/: BaseServer.java  BlockingConnectionHandler.java  NonBlockingConnectionHandler.java  Reactor.java  Server.java
Server/src/main/java/bgu/spl/net/srv/bidi/: MessageEncoderDecoderImpl.java
